# microbit-rust-std

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: main.rs
